Add academic context to chosen schedule date. (#83)
* Add schedule command

* Yellow flag handling

* Add ui to show schedule

* Add ViewSchedule command

* Add view schedule message

* Add command allowing user to view time specific tasks

* Change Date states to public

* Change Date states to public

* Add test for ViewScheduleCommand

* Add ViewScheduleCommand

* Change back to private states

* Change back to private states

* Add test for ViewScheduleCommand

* Add overload showSearchResult method

* Add ViewScheduleCommand

* ViewScheduleCommand displays separate events and deadlines for any given time period

* ViewScheduleCommand displays separate events and deadlines for any given time period

* Add getDate methods

* Add getDate methods

* Add ViewScheduleCommand

* Add javadoc

* Add javadoc

* Add javadoc

* Organise imports

* Expand imports for checkstyle :(

* Bug fix

* Add abstract boolean isWithinTimeFrame

* Change schedule ui

* Add abstract method isWithinTimeFrame

* Add abstract method isWithinTimeFrame

* Add abstract method isWithinTimeFrame

* Test ViewScheduleCommand

* Add new abtract method isWithinTimeFrame

* Add new abtract method isWithinTimeFrame

* Add new abtract method isWithinTimeFrame

* Add Schedule for printing time table

* Add ViewScheduleCommand

* Add timetable interface

* Add abstract Schedule method

* Add abstract Schedule method

* Add abstract Schedule method

* Add abstract Schedule method

* Organise imports

* Update with ui image, features and commands

* Update

* Update

* Update

* Update

* Update

* Update

* Update

* Update

* Update

* Update

* Update

* Update

* Add javadoc and format code

* Change nested loop

* Add javadoc

* Organise imports

* Organise imports

* im so technically challenged

* Add test for Schedule

* Add test for Schedule

* Update features and comman